Added encapsulation for string value into SharedPreferences and created a unit tests to verify the logic

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,4 +47,6 @@
   <string name="hello_first_fragment">Hello first fragment</string>
   <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
   <string name="submit">Submit</string>
+  <string name="characters_error_msg">Value must be characters only</string>
+  <string name="boolean_to_string_err_msg">Value must not be boolean</string>
 </resources>
